# edi

./: .copier-answers.yml  .oca-port.json  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .prettierignore  .t2d.yml  .travis.yml  README.md  oca_dependencies.txt  requirements.txt  test-requirements.txt
account_e-invoice_generate/: README.rst  __manifest__.py
account_edi_simple_pdf/: README.rst  __manifest__.py
account_einvoice_generate/: README.rst  __manifest__.py
account_invoice_download/: README.rst  __manifest__.py
account_invoice_download_ovh/: README.rst  __manifest__.py  ovh_account.py  ovh_account_view.xml  ovh_demo.xml
account_invoice_download_scaleway/: README.rst  __manifest__.py
account_invoice_download_weboob/: README.rst  __init__.py  __manifest__.py  post_install.py
account_invoice_edifact/: README.rst  __manifest__.py
account_invoice_export/: README.rst  __manifest__.py
account_invoice_export_job/: README.rst  __manifest__.py
account_invoice_export_server_env/: README.rst  __manifest__.py
account_invoice_factur-x/: README.rst  __init__.py  __manifest__.py  post_install.py
account_invoice_factur-x_py3o/: README.rst  __manifest__.py
account_invoice_facturx/: README.rst  __init__.py  __manifest__.py  hooks.py
account_invoice_facturx_buyer_ref/: __manifest__.py
account_invoice_facturx_py3o/: README.rst  __manifest__.py
account_invoice_import/: README.rst  __init__.py  __manifest__.py  __openerp__.py  account_invoice_import_config.py  partner.py  partner_view.xml  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2981 files in other folders)
